Fix some Variable
TODO : Implementing Room for Favorite User Feature

--- a/app/src/main/res/drawable/favorite_toggle.xml
+++ b/app/src/main/res/drawable/favorite_toggle.xml
@@ -6,7 +6,7 @@
         android:state_checked="false" />
 
     <item
-        android:drawable="@drawable/ic_launcher_foreground"
+        android:drawable="@drawable/ic_favorite"
         android:state_checked="true" />
 
 </selector>
